# av1-doc

./: .gitignore  AV1_QUALITY_IMPROVEMENT_SPEC.md  CLASSIFIER_IMPROVEMENTS.md  CONVERSION_REPORT_GUIDE.md  Cargo.toml  DOCKER_TROUBLESHOOTING.md  DOLBY_VISION_FIX.md  Dockerfile  ENCODING_FLOW_DIAGRAM.md  FFMPEG_8_COMPATIBILITY_CHECK.md  FFMPEG_CONFIGURATION.md  FINAL_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_SOFTWARE_AV1.md  INTEGRATION_TEST_GUIDE.md  LINUXSERVER_FFMPEG_ANALYSIS.md  LXC_DOCKER_FIX.md  MANUAL_TESTING_INSTRUCTIONS.md  MIGRATION_DOCKER_TO_SOFTWARE.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  NVME_TEMP_STORAGE.md  QUICK_REFERENCE.md  QUICK_START_SOFTWARE_AV1.md  README.md  README_IMPLEMENTATION.md  SAMPLE_CONVERSION_REPORT.txt  START_HERE.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_12_COMPLETE.md  TECHNICAL_REFERENCE.md  TEMP_DIR_FIX.md  TEST_RESULTS_SUMMARY.md  TILDE_EXPANSION_ADDED.md  TUI_FIX_SUMMARY.md  (+16 more)
.kiro/specs/av1-qsv-migration/: design.md  requirements.md  tasks.md
.kiro/specs/dolby-vision-handling/: design.md  requirements.md  tasks.md
.kiro/specs/software-av1-encoding/: design.md  requirements.md  tasks.md
.kiro/specs/tui-improvements/: design.md  requirements.md  tasks.md
.kiro/steering/: av1-encoding-quality-rules.md
crates/cli-daemon/: Cargo.toml
crates/cli-daemon/src/: main.rs
crates/cli-tui/: Cargo.toml
crates/cli-tui/proptest-regressions/: main.txt
crates/cli-tui/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/proptest-regressions/: classifier.txt  ffmpeg_docker.txt  quality.txt
crates/daemon/src/: classifier.rs  config.rs  ffmpeg_docker.rs  ffmpeg_native.rs  ffprobe.rs  job.rs  lib.rs  quality.rs  scan.rs  sidecar.rs  test_clip.rs
scripts/: clear-jobs.sh
