[workspace]
members = [
    "crates/daemon",
    "crates/cli-daemon",
    "crates/cli-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AV1 Daemon"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
sysinfo = "0.31"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.28"
uuid = { version = "1.10", features = ["v4", "serde"] }
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }

