[package]
name = "daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
uuid.workspace = true
chrono.workspace = true
toml = "0.8"
log = "0.4"

